<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pokemon_gray"
    tools:context=".RegistrarPokemon"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar_pok_mon"
        android:textAlignment="center"
        android:fontFamily="@font/pokemon_hollow"
        style="@style/PokemonTextTitle"
        android:drawableEnd="@mipmap/pokeball_75"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/etNumber"
        android:hint="@string/n_mero_de_pok_mon"
        android:layout_marginHorizontal="25dp"
        android:inputType="number"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        style="@style/PokemonText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:id="@+id/etName"
        android:hint="@string/nombre_de_pok_mon"
        android:layout_marginHorizontal="25dp"
        android:layout_marginBottom="50dp"
        style="@style/PokemonText"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_marginBottom="50dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_imagen"
        android:layout_gravity="center"
        android:id="@+id/btnUploadImage"
        android:fontFamily="@font/ketchum"
        android:textSize="20sp"
        style="@style/PokemonButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar_pok_mon"
        android:layout_gravity="center"
        android:id="@+id/btnSavePokemon"
        android:fontFamily="@font/ketchum"
        android:textSize="20sp"
        style="@style/PokemonButton"/>

</LinearLayout>
